# DARK_ARTS

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  dark_arts.cc
src/cells/: CMakeLists.txt  Cell_Data.cc  Cell_Data.h
src/exceptions/: CMakeLists.txt  Dark_Arts_Exception.cc  Dark_Arts_Exception.h  Exception_Types.h
src/input/: CMakeLists.txt  Input_Exception.h  Input_Reader.cc  Input_Reader.h  Inputs_Allowed.h  Makefile  Output_Generator.cc  Output_Generator.h  Radiation_BC_Data.h  XML_Helper.cpp_akansha  XML_Helper.h_akansha  my_test.xml  xmltest.cpp_tixml
src/materials/: Absorption_Opacity_Adams_Novak_Model.cc  Absorption_Opacity_Adams_Novak_Model.h  Absorption_Opacity_Constant.cc  Absorption_Opacity_Constant.h  Absorption_Opacity_Ideal.cc  Absorption_Opacity_Ideal.h  Absorption_Opacity_Polynomial_Space.cc  Absorption_Opacity_Polynomial_Space.h  Absorption_Opacity_Rational.cc  Absorption_Opacity_Rational.h  Absorption_Opacity_Table.cc  Absorption_Opacity_Table.h  CMakeLists.txt  Cv_Constant.cc  Cv_Constant.h  Cv_Polynomial_Temperature.cc  Cv_Polynomial_Temperature.h  Cv_Rational.cc  Cv_Rational.h  MMS_Angle_Isotropic.cc  MMS_Angle_Isotropic.h  MMS_Angle_Poly.cc  MMS_Angle_Poly.h  MMS_Space_Cos.cc  MMS_Space_Cos.h  MMS_Space_Poly.cc  MMS_Space_Poly.h  MMS_Time_Cos.cc  MMS_Time_Cos.h  MMS_Time_Poly.cc  MMS_Time_Poly.h  Materials.cc  Materials.h  Opacities.cc  Opacities.h  Planck.cc  Planck.h  Scattering_Opacity_Constant.cc  Scattering_Opacity_Constant.h  Scattering_Opacity_Ideal.cc  (+43 more)
src/materials_opacity_cv_planck/: Opacities.cpp  Opacities.cpp.bak  Opacities.h  Opacities.h.bak  Opacities_Class.cpp  Opacities_Object.cpp  Opacities_Object.h  Opacity_File_Details.cpp  Opacity_File_Details.h  Opacity_File_Details.h.bak  Opacity_Object.cpp  Opacity_Object.h  Planck.cpp  Planck.cpp.bak  Planck.h  Specific_Heat_Object.cpp  Specific_Heat_Object.h  Summary_of_Akansha_Opacity_Routines.txt
src/mip/: CMakeLists.txt  Diffusion_Matrix_Creator_Grey.cc  Diffusion_Matrix_Creator_Grey.h  Diffusion_Operator.cc  Diffusion_Operator.h  Grey_Diffusion_Ordering.cc  Grey_Diffusion_Ordering.h  Local_MIP_Assembler.cc  Local_MIP_Assembler.h  MG_LMFGA_Group_Collapse_Diffusion_Ordering.cc  MG_LMFGA_Group_Collapse_Diffusion_Ordering.h  MG_LMFGA_No_Collapse_Cell_Outer_Diffusion_Ordering.cc  MG_LMFGA_No_Collapse_Cell_Outer_Diffusion_Ordering.h  MG_LMFGA_No_Collapse_Group_Outer_Diffusion_Ordering.cc  MG_LMFGA_No_Collapse_Group_Outer_Diffusion_Ordering.h  MG_WG_Diffusion_Ordering.cc  MG_WG_Diffusion_Ordering.h  MIP_Kappa_Calculator.cc  MIP_Kappa_Calculator.h  MIP_Left_Boundary_Incident_Flux.cc  MIP_Left_Boundary_Incident_Flux.h  MIP_Left_Boundary_Refelective.cc  MIP_Left_Boundary_Refelective.h  MIP_Left_Boundary_Reflective.cc  MIP_Left_Boundary_Reflective.h  MIP_Right_Boundary_Incident_Flux.cc  MIP_Right_Boundary_Incident_Flux.h  Sweep_Matrix_Creator_Grey.cc_old  V_Diffusion_Matrix_Creator.cc  V_Diffusion_Matrix_Creator.h  V_Diffusion_Ordering.cc  V_Diffusion_Ordering.h  V_MIP_Left_Boundary.cc  V_MIP_Left_Boundary.h  V_MIP_Right_Boundary.cc  V_MIP_Right_Boundary.h
src/output/: CMakeLists.txt  Final_Space_Error_Calculator.cc  Final_Space_Error_Calculator.h  L2_Error_Calculator.cc  L2_Error_Calculator.h  Output_Generator.cc  Output_Generator.h  Space_Time_Error_Calculator.cc  Space_Time_Error_Calculator.h  Status_Generator.cc  Status_Generator.h
src/quadrature_fem_math/: Angular_Quadrature.cc  Angular_Quadrature.h  CMakeLists.txt  Fem_Quadrature.cc  Fem_Quadrature.h  Legendre_Poly_Evaluation.cc  Legendre_Poly_Evaluation.h  Matrix_Construction_Exact.cc  Matrix_Construction_Exact.h  Matrix_Construction_Self_Lumping.cc  Matrix_Construction_Self_Lumping.h  Matrix_Construction_Trad_Lumping.cc  Matrix_Construction_Trad_Lumping.h  Quadrule_New.cc  Quadrule_New.h  Sweep_Matrix_Creator_Grey.cc  Sweep_Matrix_Creator_Grey.h  Sweep_Matrix_Creator_MF.cc  Sweep_Matrix_Creator_MF.h  V_Matrix_Construction.cc  V_Matrix_Construction.h  V_Sweep_Matrix_Creator.cc  V_Sweep_Matrix_Creator.h
src/solvers/: CMakeLists.txt  Intensity_Update_Grey.cc  Intensity_Update_Grey.h  Intensity_Update_MF.cc  Intensity_Update_MF.h  L1_Phi_Error_Calculator.cc  L1_Phi_Error_Calculator.h  L1_Rho_Phi_Error_Calculator.cc  L1_Rho_Phi_Error_Calculator.h  MF_ARD_Solver_FP_No_LMFGA.cc  MF_ARD_Solver_FP_No_LMFGA.h  Pointwise_Phi_Error_Calculator.cc  Pointwise_Phi_Error_Calculator.h  Solution_Saver_Flux_Moments.cc  Solution_Saver_Flux_Moments.h  Solution_Saver_K_I.cc  Solution_Saver_K_I.h  Sweep_Fixed_Source_Linearization.cc  Sweep_Fixed_Source_Linearization.h  Sweep_Fixed_Source_None.cc  Sweep_Fixed_Source_None.h  Temperature_Update_Grey.cc  Temperature_Update_Grey.h  Temperature_Update_MF.cc  Temperature_Update_MF.h  Transport_Sweep.cc  Transport_Sweep.h  V_Intensity_Update.cc  V_Intensity_Update.h  V_MF_ARD_Solver.cc  V_MF_ARD_Solver.h  V_Phi_Error_Calculator.cc  V_Phi_Error_Calculator.h  V_Solution_Saver.cc  V_Solution_Saver.h  V_Sweep_Fixed_Source.cc  V_Sweep_Fixed_Source.h  V_Temperature_Update.cc  V_Temperature_Update.h  V_WGRS.cc  (+5 more)
src/temperature_update/: CMakeLists.txt  Grey_Temperature_Matrix_Creator.cc  Grey_Temperature_Matrix_Creator.h  MF_Temperature_Matrix_Creator.cc  MF_Temperature_Matrix_Creator.h  Temperature_Update.cc  Temperature_Update.h  V_Temperature_Matrix_Creator.cc  V_Temperature_Matrix_Creator.h
src/time_data/: CMakeLists.txt  DT_Calculator_Exponential.cc  DT_Calculator_Exponential.h  DT_Calculator_Ramp.cc  DT_Calculator_Ramp.h  DT_Calculator_Temperature_Change.cc  DT_Calculator_Temperature_Change.h  DT_Calculator_Vector.cc  DT_Calculator_Vector.h  Time_Data.cc  Time_Data.h  V_DT_Calculator.cc  V_DT_Calculator.h
src/time_marcher/: CMakeLists.txt  Time_Marcher.cc  Time_Marcher.h
src/time_stepper/: CMakeLists.txt  Time_Stepper.cc  Time_Stepper.h
src/transport_sweep/: CMakeLists.txt  Solution_Saver_Flux_Moments.cc  Solution_Saver_Flux_Moments.h  Solution_Saver_K_I.cc  Solution_Saver_K_I.h  Sweep_Fixed_Source_Linearization.cc  Sweep_Fixed_Source_Linearization.h  Sweep_Fixed_Source_None.cc  Sweep_Fixed_Source_None.h  (+27 more)
(+846 files in other folders)
